Add timer selection modal and enhance notification mode layout
- Add timer duration selection with 30min/1hr/2hr presets and custom input

- Enhance notification mode emoji layout with semi-step pyramid positioning

- Update tests to support new AnimatedEmoji props and timer functionality

- Add Modal and TextInput component mocks for testing

- Update TypeScript config and add audio assets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,21 @@
     "noEmit": true,
     "isolatedModules": true,
     "skipLibCheck": true,
-    "lib": ["es2019"],
-    "types": ["jest", "@testing-library/jest-native"]
+    "lib": [
+      "es2019"
+    ],
+    "types": [
+      "jest",
+      "@testing-library/jest-native"
+    ]
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.d.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
+  "extends": "expo/tsconfig.base"
 }
