--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native": "0.79.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "expo-av": "~15.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
