Add environment variables for dev/prod notification modes - Add EXPO_PUBLIC_ENV environment variable support - Create .env and .env.production files for environment configuration - Implement separate notification strategies: dev uses local notifications, prod uses push notifications - Add environment indicator in UI (🔧 DEV MODE / 🚀 PROD MODE) - Update EAS configuration with environment-specific build profiles - Add deploy scripts for both development and production web deployments - Update tests to support new environment variable setup - Add getExpoPushTokenAsync mock for production notification testing

--- a/app.json
+++ b/app.json
@@ -20,13 +20,22 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-audio"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "38c1b2a8-7e31-4365-9996-b982ad430a7c"
+      }
+    }
   }
 }
