Fix modal positioning issues on iOS devices - Add SafeAreaView wrapper to modal overlay for proper safe area handling - Update modal styles with responsive width and platform-specific props - Add presentationStyle and statusBarTranslucent for cross-platform compatibility - Enhance modal with shadow effects and proper centering - Ensure modal displays correctly on both iOS devices

--- a/app.json
+++ b/app.json
@@ -8,10 +8,11 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.ale.pottytimer",
@@ -28,13 +29,23 @@
       "permissions": [
         "android.permission.RECORD_AUDIO",
         "android.permission.MODIFY_AUDIO_SETTINGS"
-      ]
+      ],
+      "package": "com.ale.pottytimer"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
     },
+    "scheme": "potty-timer",
     "plugins": [
-      "expo-audio"
+      "expo-router",
+      "expo-sqlite",
+      [
+        "expo-audio",
+        {
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
+        }
+      ]
     ],
     "extra": {
       "eas": {
