--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
+    "build:dev": "eas build:dev",
     "start": "expo start",
     "start:dev": "expo start",
     "start:prod": "NODE_ENV=production expo start",
@@ -37,7 +38,11 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-web": "^0.20.0",
-    "expo-dev-client": "~5.1.8"
+    "expo-dev-client": "~5.1.8",
+    "expo-router": "~5.0.7",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-screens": "~4.10.0",
+    "expo-sqlite": "~15.2.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
