--- a/package.json
+++ b/package.json
@@ -16,6 +16,16 @@
     "test:app": "jest App.test.tsx",
     "test:emoji": "jest AnimatedEmoji.test.tsx",
     "test:ci": "jest --coverage --coverageDirectory='coverage' --coverageReporters=json-summary,lcov,text",
+    "test:database": "jest services/database.test.ts",
+    "test:context": "jest contexts/TimerContext.test.tsx",
+    "test:api": "jest app/api/**/*.test.ts",
+    "test:hooks": "jest hooks/**/*.test.ts",
+    "test:integration": "jest app/index.test.tsx",
+    "test:components": "jest --testPathPattern='(App|AnimatedEmoji|index)\\.test\\.(tsx?|jsx?)$'",
+    "test:unit": "jest --testPathPattern='(services|contexts|hooks)/.*\\.test\\.(tsx?|jsx?)$'",
+    "test:api-only": "jest --testPathPattern='app/api/.*\\.test\\.(tsx?|jsx?)$'",
+    "test:verbose": "jest --verbose",
+    "test:silent": "jest --silent",
     "deploy:web": "npx expo export --platform web && npx eas-cli deploy",
     "deploy:web:prod": "NODE_ENV=production npx expo export --platform web && npx eas-cli deploy --prod"
   },
@@ -26,30 +36,33 @@
     "expo": "^53.0.9",
     "expo-audio": "~0.4.5",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.1.8",
     "expo-device": "~7.1.4",
     "expo-haptics": "~14.1.4",
     "expo-notifications": "~0.31.2",
+    "expo-router": "~5.0.7",
+    "expo-sqlite": "~15.2.10",
     "expo-status-bar": "~2.2.3",
     "expo-task-manager": "~13.1.5",
     "jest-environment-node": "^30.0.0-beta.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-web": "^0.20.0",
-    "expo-dev-client": "~5.1.8",
-    "expo-router": "~5.0.7",
-    "react-native-gesture-handler": "~2.24.0",
     "react-native-screens": "~4.10.0",
-    "expo-sqlite": "~15.2.10"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/jest": "^29.5.14",
+    "@types/jest-json-schema": "^6.1.4",
     "@types/react": "~19.0.10",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
+    "jest-json-schema": "^6.1.0",
     "react-test-renderer": "^19.0.0",
     "typescript": "~5.8.3"
   },
